--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div> My current favourite song is 
+		<a href="https://www.youtube.com/watch?v=FJ55SHCzt88">Humdard</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
